SASS spacing function fix

--- a/src/stylesheets/settings/_spacing.scss
+++ b/src/stylesheets/settings/_spacing.scss
@@ -6,4 +6,4 @@ $base-spacing-unit-tiny: round($base-spacing-unit / 3);
 $base-spacing-unit-small: round($base-spacing-unit / 2);
 $base-spacing-unit-medium: $base-spacing-unit;
 $base-spacing-unit-large: round($base-spacing-unit * 2);
-$base-spacing-unit-huge: round($base-spacing-unit * 3);
+$base-spacing-unit-extra-large: round($base-spacing-unit * 3);
